Avancé du NPC : -Création d'un nouvelle item pour gérer les emplacements de spawn -Création des commercial roads (model) -Ajout d'un nouveau json pour enregistrer les COMMERCIAL_ROADS -Gestion de l'enregistrement des roads -Ajout d'un effet sur les points -ajout de commande pour la gestion lors qu'on est en mode placement avec /Define ...
-A faire timer avec le time max pour le placement des NPCS
-Apparaition des npcs aléatoire
-Gestion des multiroads